Version 1.1

  Fri Jun 29 14:11:32 CEST 2012

  * Instead of downloading the original manpages during building
    of the package, the software now uses the locally installed
    manpages on the system. To enable the previous behaviour,
    there is now an option "--enable-download" for the configure
    script. Thanks to Jeremy Bicha <jbicha@ubuntu.com> for the
    bug report. This closes Debian bug #679122.
  * Updated translations:
    groff.1, gzip.1, capget.2, connect.2, ptrace.2, read.2, readdir.2, 
    rename.2, setpgid.2, setreuid.2, setuid.2, statfs.2, truncate.2, 
    fopen.3, fread.3, getgrnam.3, getpwnam.3, isalpha.3, malloc.3, 
    memchr.3, mkstemp.3, perror.3, qsort.3, scandir.3, scanf.3, 
    strerror.3, sysconf.3, isdnlog.5, proc.5, iso_8859-8.7

    
Version 1.0

  Fri Jun  8 11:58:02 CEST 2012

  * Converted package to use autotools for setup and installation
  * Removed generated translations from tarball, instead download
    the original manpages and generate the translations before
    installation
  * Because of the above, the package now needs wget and po4a
    during installation
  * New translations:
    iso_8859-8.7
  * Updated translations:
    arch.1, base64.1, basename.1, cat.1, chcon.1, chgrp.1, chmod.1, 
    chown.1, cksum.1, comm.1, cp.1, csplit.1, cut.1, date.1, dd.1, 
    df.1, dir.1, dircolors.1, dirname.1, du.1, echo.1, env.1, expand.1, 
    expr.1, factor.1, false.1, fmt.1, fold.1, free.1, grep.1, groups.1, 
    head.1, hostid.1, id.1, install.1, join.1, link.1, ln.1, logname.1, 
    ls.1, md5sum.1, mkdir.1, mkfifo.1, mknod.1, mktemp.1, mv.1, nice.1, 
    nl.1, nohup.1, nproc.1, od.1, paste.1, pathchk.1, pinky.1, pr.1, 
    printenv.1, printf.1, ptx.1, pwd.1, readlink.1, rm.1, rmdir.1, 
    runcon.1, seq.1, sha1sum.1, sha224sum.1, sha256sum.1, sha384sum.1, 
    sha512sum.1, shred.1, shuf.1, sleep.1, sort.1, split.1, stat.1, 
    stdbuf.1, stty.1, sum.1, sync.1, tac.1, tail.1, tee.1, test.1, 