@@ -1,3 +1,8 @@
+UNRELEASED
+
+  * During ./configure, check that po4a is available on the system.
+
+
 Version 1.1
 
   Fri Jun 29 14:11:32 CEST 2012
